[gd_scene load_steps=10 format=3 uid="uid://xinueaen881v"]

[ext_resource type="Script" path="res://scenes/summons/bodies/summon_body.gd" id="1_pbdua"]
[ext_resource type="Script" path="res://scr/modules/health_node/health_node.gd" id="2_r5tq7"]
[ext_resource type="Script" path="res://scr/modules/hitbox_node/hitbox_node.gd" id="3_pgmhl"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_p6eqo"]
size = Vector2(32, 32)

[sub_resource type="Animation" id="Animation_ak2ym"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprites:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprites:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_31q1t"]
resource_name = "idle"
length = 2.0
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprites:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1, 0.8), Vector2(1, 1), Vector2(1, 0.8)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprites:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.174533, 0.0, -0.174533]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_eo7jv"]
_data = {
"RESET": SubResource("Animation_ak2ym"),
"idle": SubResource("Animation_31q1t")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yi5l5"]
size = Vector2(24, 32)

[sub_resource type="LabelSettings" id="LabelSettings_f3gbs"]
font_color = Color(1, 0, 0, 1)
outline_size = 6
outline_color = Color(0, 0, 0, 1)

[node name="Summon_Body" type="CharacterBody2D" node_paths=PackedStringArray("health_node", "hitbox_node") groups=["Summon"]]
collision_layer = 128
collision_mask = 0
motion_mode = 1
script = ExtResource("1_pbdua")
health_node = NodePath("Modules/Health_Node")
hitbox_node = NodePath("Modules/Hitbox_Node")

[node name="Collision_Shape" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_p6eqo")
debug_color = Color(0.23793, 0.618422, 0.440188, 0.42)

[node name="Sprites" type="Node2D" parent="."]

[node name="Sprite" type="Sprite2D" parent="Sprites"]
position = Vector2(1, -16)
scale = Vector2(2, 2)

[node name="Animation_Player" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_eo7jv")
}

[node name="Modules" type="Node2D" parent="."]

[node name="Health_Node" type="Node" parent="Modules"]
script = ExtResource("2_r5tq7")

[node name="Hitbox_Node" type="Area2D" parent="Modules" node_paths=PackedStringArray("body")]
collision_layer = 4
collision_mask = 0
script = ExtResource("3_pgmhl")
body = NodePath("../..")
metadata/_edit_group_ = true

[node name="Collision_Shape" type="CollisionShape2D" parent="Modules/Hitbox_Node"]
shape = SubResource("RectangleShape2D_yi5l5")
disabled = true
debug_color = Color(0.88, 0.2552, 0.2552, 0.419608)

[node name="Label" type="Label" parent="."]
visible = false
offset_left = -40.0
offset_top = -72.0
offset_right = 40.0
offset_bottom = -48.0
text = "0.0"
label_settings = SubResource("LabelSettings_f3gbs")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="damaged" from="Modules/Health_Node" to="." method="_on_health_node_damaged"]
[connection signal="died" from="Modules/Health_Node" to="." method="_on_health_node_died"]
